welcome.lessons.welcome.variables.Variables.scala.error
Variables:5: error: recursive variable nPas needs type
	var nPas = nPas + 1
                   ^Variables:7: error: type mismatch;
 found   : Unit
 required: Boolean
while(nPas = 0){
           ^Variables:9: error: recursive variable nPas needs type
	var nPas=nPas - 1
                 ^