welcome.lessons.welcome.variables.Variables.scala.code
var nPas = 0
while(!estSurBiscuit){
	avance()
	var nPas = nPas + 1
}
while(nPas = 0){
	recule()
	var nPas=nPas - 1
}
